--- a/index.html
+++ b/index.html
@@ -10,38 +10,44 @@
       <header class="mainheader">
         <h2>Converse Chuck Taylor All Star Low Top</h2>
       </header>
-
-      <img
-        src="challenges.jpg"
-        alt="Converse Chuck Taylor All Star Low"
-        width="250"
-        height="250"
-      />
-
-      <p class="price"><strong>&dollar;65.00</strong></p>
-      <p class="shipping-text">Free Shipping</p>
-      <p class="info">
-        <strong>
-          Ready to dress up or down,these classic canvas Chucks are an everyday
-          wardrobe staple.</strong
-        >
-      </p>
-      <a class="moreinfo" href="#">More information&rarr;</a>
-      <div class="color-select">
-        <div class="first"></div>
-        <div class="second"></div>
-        <div class="third"></div>
-        <div class="fourth"></div>
-        <div class="fifth"></div>
-        <div class="sixth"></div>
+      <div class="flex">
+        <img
+          src="challenges.jpg"
+          alt="Converse Chuck Taylor All Star Low"
+          width="250"
+          height="250"
+          class="product-img"
+        />
+        <div class="price-details">
+          <div class="flex-try">
+            <p class="price"><strong>&dollar;65.00</strong></p>
+            <p class="shipping-text">Free Shipping</p>
+          </div>
+          <p class="info">
+            <strong>
+              Ready to dress up or down,these classic canvas Chucks are an
+              everyday wardrobe staple.</strong
+            >
+          </p>
+          <a class="moreinfo" href="#">More information&rarr;</a>
+          <div class="color-select">
+            <div class="first"></div>
+            <div class="second"></div>
+            <div class="third"></div>
+            <div class="fourth"></div>
+            <div class="fifth"></div>
+            <div class="sixth"></div>
+          </div>
+        </div>
+        <div class="detail-info">
+          <h3 class="list-title">Product details</h3>
+          <ul>
+            <li>Lightweight,durable canvas sneaker</li>
+            <li>Lightly packed footbed for added comfort</li>
+            <li>Iconic Chuck Taylor ankle patch.</li>
+          </ul>
+        </div>
       </div>
-      <h3 class="list-title">Product details</h3>
-      <ul>
-        <li>Lightweight,durable canvas sneaker</li>
-        <li>Lightly packed footbed for added comfort</li>
-        <li>Iconic Chuck Taylor ankle patch.</li>
-      </ul>
-
       <button>Add to cart</button>
     </article>
   </body>
